# rollcall

./: .gitignore  LICENSE  README.md  pyproject.toml
rollcall/: __init__.py  cli.py  config.py  core.py  merge.py  schemas.py  types.py
rollcall/services/: genai_client.py  guess.py  ocr_pairs.py
rollcall/utils/: ffmpeg_utils.py  image_utils.py
